gcc/testsuite/rust/rustc/ui/async-await/issues/issue-61187.rs
// edition:2018

fn main() {}

async fn response(data: Vec<u8>) {
    data.reverse(); // { dg-error ".E0596." "" { target *-*-* } }
}

